[package]
name = "actix-extras-285"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
async-stream = { git = "https://github.com/SabrinaJewson/async-stream.rs", branch = "no-proc-macro" }
